hphp/test/slow/stringmap_array/usort.php.expectf
Fatal error: syntax error, unexpected ',' in %s/usort.php on line 4